syntax = "proto3";

package authpb;

option go_package = "./authpb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    int64 user_id = 1;
    string username = 2;
    string email = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    int64 user_id = 2;
    string username = 3;
    string email = 4;
}
